[metadata]
name = pyICU
description_file = README.md
long_description_content_type = text/markdown
summary = pyICU helps with working with common ICU databases.
author = 'Christian Porschen'
author_email = 'christian.porschen@ukmuenster.de'
url = https://github.com/AI2MS/pyICU
project_urls=
    Source Code = https://github.com/AI2MS/pyICU
    Documentation = https://github.com/AI2MS/pyICU
    Bug Tracker = https://github.com/AI2MS/pyICU/issues

download_url=https://github.com/AI2MS/pyICU
keywords=
    AKI
classifier=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers
decription-file = README.md

[files]
packages=pyICU